cmake_minimum_required (VERSION 2.8)

project(vision CXX)
set(CMAKE_CXX_STANDARD 11)
find_package(OpenCV REQUIRED)
find_package(ntcore)
find_package(wpiutil)
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(${CMAKE_SOURCE_DIR}/ntcore/include)
include_directories(${CMAKE_SOURCE_DIR}/wpilib/include)
link_directories(${CMAKE_SOURCE_DIR}/ntcore/Linux/amd64)
link_directories(${CMAKE_SOURCE_DIR}/wpilib/Linux/amd64)
set(CUDA_USE_STATIC_CUDA_RUNTIME OFF)
add_executable(vision main.cpp)
#add_library(wpiutil STATIC ${WPIUTIL_SRC_FILES})
#add_library(ntcore STATIC ~/Documents/network_tables/Linux/arm/libntcore.a)
target_link_libraries(vision ${OpenCV_LIBS})
#target_link_libraries(vision ${CMAKE_SOURCE_DIR}/ntcore/Linux/armhf/libwpiutil.so)
target_link_libraries(vision ntcore wpiutil)
#target_link_libraries(vision ${CMAKE_SOURCE_DIR}/ntcore/Linux/arm/libwpiutil.a)
#target_link_libraries(vision ${CMAKE_SOURCE_DIR}/ntcore/Linux/arm/libntcore.a)

MESSAGE(STATUS "OPENCV LIBS" ${OpenCV_LIBS})


